load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])

yacl_cc_binary(
    name = "apsitest",
        srcs = [
        "aPSI.h",
        "aPSI.cc",
        "main.cc"
    ],
    deps = [
        "//yacl/base:int128",
        "//examples/okvs:galois128",
        "//yacl/crypto/hash:blake3",
        "//yacl/utils:parallel",
        "//yacl/crypto/hash:hash_utils",
        "@local_apsi//:apsi",  
        "@seal//:seal", 
        "@kuku//:kuku"
    ],
    copts = ["-I/usr/local/include/APSI-0.11",
             "-I/usr/local/include/SEAL-4.1",
             "-I/usr/local/include/Kuku-2.1",
             "-O3"],
    linkopts = ["-L/usr/local/lib", "-lapsi-0.11","-ljsoncpp","-llog4cplus","-lzmq"],
)
