# Copyright 2024 Guowei Ling.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])

yacl_cc_binary(
    name = "bokvs_example",
    srcs = [
        "bokvs.cc",
        "main.cc",
        "bokvs.h",
    ],
    deps = [
    "//yacl/base:int128",
    "//yacl/math/f2k:f2k",
    "//examples/okvs:galois128",
    "//yacl/crypto/hash:blake3",
    "//yacl/utils:parallel",
    "//yacl/crypto/hash:hash_utils"
    ],
    copts = ["-maes", "-mpclmul"],
)
