load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])

yacl_cc_binary(
    name = "mini_example",
    srcs = [
        "mini_psi.cc",
        "mini_psi.h",
        "polynomial.cc",
        "polynomial.h",
        "main.cc"
    ],
    deps = [
        "//yacl/kernel/algorithms:kkrt_ote",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/utils:cuckoo_index",
        "//yacl/link:test_util",
        "//yacl/base:int128",            # 包含 uint128_t 支持
        "//yacl/base:exception",          # 异常处理支持
    ],
    copts = ["-maes", "-mpclmul"],
    linkopts = ["-L/usr/local/lib", "-lcurve25519"],  # 指定库路径和库名称
    includes = ["/usr/local/include"],                # 指定头文
)
